docs: 完善 README，添加完整使用文档
- 项目架构说明
- 两种模式：CLI 本地诊断 + Server/Agent 分布式监控
- Server 启动指南
- Agent 使用方式（启动参数、配置、系统属性）
- 完整 API 文档（REST + WebSocket）
- 配置参数说明